--- a/src/main/resources/view/Timing/MarksMonitorCompetition.fxml
+++ b/src/main/resources/view/Timing/MarksMonitorCompetition.fxml
@@ -39,7 +39,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView fx:id="checkpointTable" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="154.0" prefWidth="434.0" stylesheets="@css/table.css" GridPane.columnIndex="1">
+                  <TableView fx:id="checkpointTable" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="154.0" prefWidth="434.0" stylesheets="@../../assets/css/table.css" GridPane.columnIndex="1">
                      <columns>
                         <TableColumn fx:id="groupColumn" prefWidth="125.0" text="Группа" />
                         <TableColumn fx:id="startTimeColumn" prefWidth="172.80006408691406" text="Стартовое время" />
@@ -66,7 +66,7 @@
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin></TextField>
-                        <Button fx:id="stopTime" mnemonicParsing="false" stylesheets="@css/Buttons.css" text="Стоп" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                        <Button fx:id="stopTime" mnemonicParsing="false" stylesheets="@../../assets/css/Buttons.css" text="Стоп" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -82,7 +82,7 @@
                            </font>
                         </TextField>
                         <Label text="Начало отсчета времени" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                        <Button fx:id="startTime" mnemonicParsing="false" stylesheets="@css/Buttons.css" text="Старт" textFill="WHITE" translateX="65.0" translateY="41.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Button fx:id="startTime" mnemonicParsing="false" stylesheets="@../../assets/css/Buttons.css" text="Старт" textFill="WHITE" translateX="65.0" translateY="41.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -118,7 +118,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" stylesheets="@css/Buttons.css" text="Добавить вручную" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <Button mnemonicParsing="false" stylesheets="@../../assets/css/Buttons.css" text="Добавить вручную" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -128,7 +128,7 @@
                         <String fx:value="btn-warning" />
                      </styleClass>
                   </Button>
-                  <Button mnemonicParsing="false" stylesheets="@css/Buttons.css" text="Добавить из базы" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                  <Button mnemonicParsing="false" stylesheets="@../../assets/css/Buttons.css" text="Добавить из базы" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -138,7 +138,7 @@
                         <String fx:value="btn-warning" />
                      </styleClass>
                   </Button>
-                  <Button mnemonicParsing="false" stylesheets="@css/Buttons.css" text="Загрузить из файла" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.halignment="CENTER">
+                  <Button mnemonicParsing="false" stylesheets="@../../assets/css/Buttons.css" text="Загрузить из файла" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.halignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -147,7 +147,7 @@
                         <String fx:value="btn-common" />
                         <String fx:value="btn-primary" />
                      </styleClass></Button>
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="231.0" stylesheets="@css/Buttons.css" text="Печать стартового протокола" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="231.0" stylesheets="@../../assets/css/Buttons.css" text="Печать стартового протокола" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -159,13 +159,13 @@
                   </Button>
                </children>
             </GridPane>
-            <TabPane fx:id="tabPane" maxWidth="-Infinity" prefHeight="346.0" prefWidth="1066.0" stylesheets="@css/table.css" tabClosingPolicy="SELECTED_TAB" GridPane.rowIndex="2">
+            <TabPane fx:id="tabPane" maxWidth="-Infinity" prefHeight="346.0" prefWidth="1066.0" stylesheets="@../../assets/css/table.css" tabClosingPolicy="SELECTED_TAB" GridPane.rowIndex="2">
               <tabs>
                 <Tab text="Участники">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TableView layoutX="-3.0" layoutY="-1.0" prefHeight="318.0" stylesheets="@css/table.css">
+                              <TableView layoutX="-3.0" layoutY="-1.0" prefHeight="318.0" stylesheets="@../../assets/css/table.css">
                                  <columns>
                                     <TableColumn prefWidth="50.0" resizable="false" text="№" />
                                     <TableColumn prefWidth="100.0" resizable="false" text="Участник" />
@@ -187,7 +187,7 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TableView layoutX="-3.0" layoutY="-1.0" prefHeight="318.0" stylesheets="@css/table.css">
+                              <TableView layoutX="-3.0" layoutY="-1.0" prefHeight="318.0" stylesheets="@../../assets/css/table.css">
                                  <columns>
                                     <TableColumn prefWidth="50.0" resizable="false" text="№" />
                                     <TableColumn prefWidth="100.0" resizable="false" text="Участник" />
@@ -208,7 +208,7 @@
             </TabPane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.valignment="TOP">
                <children>
-                  <Button fx:id="addGroup" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" graphicTextGap="1.0" layoutX="410.0" layoutY="-8.0" mnemonicParsing="false" onAction="#addingGroup" stylesheets="@css/Buttons.css" text="Редактировать группы" textAlignment="CENTER" textFill="WHITE" textOverrun="LEADING_ELLIPSIS">
+                  <Button fx:id="addGroup" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" graphicTextGap="1.0" layoutX="410.0" layoutY="-8.0" mnemonicParsing="false" onAction="#addingGroup" stylesheets="@../../assets/css/Buttons.css" text="Редактировать группы" textAlignment="CENTER" textFill="WHITE" textOverrun="LEADING_ELLIPSIS">
                      <font>
                         <Font size="14.0" />
                      </font>
