--- a/src/main/resources/view/css/Buttons.css
+++ b/src/main/resources/view/css/Buttons.css
@@ -53,3 +53,10 @@
     -fx-pref-height: 26px;
     -fx-padding: 4 8 4 8;
 }
+.btn-image-large {
+    -fx-background-radius: 6px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);
+    -fx-pref-width: 32px;
+    -fx-pref-height: 30px;
+    -fx-padding: 8;
+}
